2002-09-17  Nick Drochak  <ndrochak@gol.com>

	* UriTest.cs: Fixed some path separator issues for the tests running on
	linux.

2002-05-28  Lawrence Pit <loz@cable.a2000.nl>

	* UriTest.cs: added tests ctor UriTest (baseUri, relativeUri)

2002-05-22  Lawrence Pit <loz@cable.a2000.nl>

	* Added UriTest.MakeRelative

2002-05-12  Lawrence Pit <loz@cable.a2000.nl>

	* Added UriTest.TestLocalPath
	
2002-05-05  Lawrence Pit <loz@cable.a2000.nl>

	* UriTest.cs: added
	* UriBuilderTest.cs: added
	* AllTests.cs: added